@@ -1,3 +1,11 @@
+2002-12-23  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/gtkhex.c: use colors from widget styles to ensure text
+	visibility when using high-contrast, accessible themes. initial
+	patch was kinldy provided by Pasupathi Duraisamy of Wipro. thanx!
+	* src/gtkhex.h (struct _GtkHexClass): removed colormap and cursor
+	color members.
+
 2002-11-24  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/hex-document.c, src/ui.c: applied patch from Hideoshi
